# gcc-cross-compiler

./: .gitmodules  CMakeLists.txt  README.md  check_gcc.sh  cross-thumbv6m-none-eabi.txt
